--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,8 +7,8 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: grey;
+  min-height: 5vh;
   display: flex;
   flex-direction: column;
   align-items: center;
