--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,7 +7,7 @@
 }
 
 .App-header {
-  background-color: grey;
+  background-color: green;
   min-height: 5vh;
   display: flex;
   flex-direction: column;
